# warm-transfer

./: .gitignore  BENCHMARK_EXPANSION.md  LICENSE  README.md  README.ru.md  RESEARCH.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  release.yml
benchmarks/: ablation.py  run.py
configs/: ablation_alpha.yaml  ablation_k.yaml  amazon_toys.yaml  amazon_toys_text.yaml  deep.yaml  example.yaml  full_matrix.yaml  kion_text.yaml  mind.yaml  seeds.yaml
datasets/: __init__.py  prepare_amazon_toys.py  prepare_ml1m.py
docs/: api.md  api.ru.md  datasets.md  datasets.ru.md  eval-protocol.md  eval-protocol.ru.md  index.md  index.ru.md  methods.md  methods.ru.md
docs/explanation/: glossary.md  glossary.ru.md  index.md  index.ru.md  methods-families.md  methods-families.ru.md  popularity-bias.md  popularity-bias.ru.md  why.md  why.ru.md
docs/getting-started/: installation.md  installation.ru.md  quickstart.md  quickstart.ru.md  tutorial.md  tutorial.ru.md
docs/how-to/: add-donor.md  add-donor.ru.md  add-method.md  add-method.ru.md  choose-method.md  choose-method.ru.md  index.md  index.ru.md  quick-verdict.md  quick-verdict.ru.md  run-benchmark.md  run-benchmark.ru.md
docs/reference/: contracts.md  contracts.ru.md
docs/results/: ablation_alpha.md  ablation_k.md  amazon_toys.md  amazon_toys_text.md  deep.md  full_matrix.md  kion_text.md  mind.md  seeds.md
docs/stylesheets/: extra.css
examples/: quickstart.py  recommend_quickstart.py
scripts/: popularity_buckets.py
src/coldbench/: __init__.py  __main__.py  analysis.py  config.py  results.py  runner.py
src/coldbench/adapters/: __init__.py  als.py  base.py  bpr.py  catboost_adapter.py
src/coldbench/datasets/: __init__.py  _download.py  base.py  goodbooks.py  kion.py  movielens.py
src/coldbench/splitters/: __init__.py  base.py  pseudo_cold.py
src/coldscore/: __init__.py  _pdutils.py  columns.py  exceptions.py  registry.py  schema.py  seeding.py  types.py
src/coldscore/methods/: __init__.py  attention_emb.py  attention_knn.py  base.py  baselines.py  debiased_knn.py  dropoutnet.py  embedding_avg.py  knn.py  linmap.py  linmap_emb.py  logreg_calib.py  magnitude_scaling.py  scale_shift.py  stacking.py  stacking_plus.py
src/coldscore/metrics/: __init__.py  _topk.py  classification.py  relative.py
src/coldscore/similarity/: __init__.py  content.py
src/warmtransfer/: __init__.py  _pdutils.py  columns.py  exceptions.py  holdout.py  recommend.py  registry.py  schema.py  seeding.py  types.py
src/warmtransfer/bench/: __init__.py  __main__.py  analysis.py  config.py  results.py  runner.py
src/warmtransfer/bench/adapters/: __init__.py  als.py  base.py  bpr.py  catboost_adapter.py  ease.py  two_tower.py
src/warmtransfer/bench/datasets/: __init__.py  _download.py  amazon.py  base.py  goodbooks.py  kion.py  mind.py  movielens.py
src/warmtransfer/bench/splitters/: __init__.py  base.py  pseudo_cold.py
src/warmtransfer/methods/: __init__.py  attention_emb.py  attention_knn.py  base.py  baselines.py  debiased_knn.py  dropoutnet.py  embedding_avg.py  knn.py  linmap.py  linmap_emb.py  logreg_calib.py  magnitude_scaling.py  scale_shift.py  stacking.py  stacking_plus.py
src/warmtransfer/metrics/: __init__.py  _topk.py  classification.py  ranking.py  relative.py
src/warmtransfer/similarity/: __init__.py  content.py
tests/: conftest.py
tests/unit/: test_adapter_bpr.py  test_adapter_catboost.py  test_adapter_ease.py  test_adapter_two_tower.py  test_analysis.py  test_cli.py  test_cli_try.py  test_dataset_amazon.py  test_dataset_goodbooks.py  test_dataset_kion.py  test_dataset_mind.py  test_examples.py  test_holdout.py  test_method_attention_emb.py  test_method_attention_knn.py  test_method_debiased_knn.py  test_method_dropoutnet.py  test_method_embedding_avg.py  test_method_linmap.py  test_method_linmap_emb.py  test_method_logreg_calib.py  test_method_magnitude_scaling.py  test_method_scale_shift.py  test_method_stacking.py  test_method_stacking_plus.py  test_methods_baselines.py  test_metrics_auc.py  test_metrics_calc.py  test_metrics_properties.py  test_metrics_ranking.py  test_recommend.py  test_recommend_feasibility.py  test_registry.py  test_runner_resources.py  test_schema.py  test_splitter_leakage.py  test_topk.py  test_types.py
warmtransfer/: __init__.py
warmtransfer/core/: __init__.py  dataset.py  method.py  model.py  runner.py
warmtransfer/methods/: __init__.py  baselines.py  embedding_agg.py  score_agg.py
warmtransfer/metrics/: __init__.py  metrics.py
warmtransfer/models/: __init__.py  bpr.py
warmtransfer/similarity/: __init__.py  item_similarity.py
warmtransfer/splitters/: __init__.py  splitter.py
