[project]
name = "warm-transfer"
version = "0.1.0"
description = "Model-agnostic plug & play library for transferring and calibrating a trained recommender's scores onto cold-start items, plus a reproducible benchmark"
readme = "README.md"
authors = [
    { name = "Nikita Tenishev", email = "nik.tenishev@gmail.com" }
]
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["recommender-systems", "cold-start", "item-cold-start", "benchmark", "recsys"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
]
dependencies = [
    # === lightweight core: only what is needed to apply methods and metrics ===
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.4",   # Ridge / LogReg / cosine — lightweight, no heavy transformers
    "pydantic>=2.6",       # validation at the boundaries: configs, public API schemas
]

[project.optional-dependencies]
deep = [
    "torch>=2.2",          # DeepLinMap, Two-Tower, full SimCSR (MPS on M1 / CUDA on RTX)
]
bench = [
    # === heavy donor engines and benchmark infrastructure ===
    "implicit>=0.7",       # ALS + BPR (matrix-factorization family)
    "catboost>=1.2",       # gradient boosting on features
    "rectools>=0.13",      # model wrappers + convention cross-checks
    # NB: lightfm is intentionally not included — its sdist does not build with recent
    #     setuptools and there are no py3.11/arm wheels. BPR comes from implicit (same MF/BPR family).
    "pyarrow>=15",         # parquet artifacts and score cache
    "pyyaml>=6.0",
    "tabulate>=0.9",       # markdown result tables
    "tqdm>=4.66",
    "psutil>=5.9",         # latency / RSS measurement
    "requests>=2.31",      # dataset downloads
]
all = ["warm-transfer[deep,bench]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "hypothesis>=6.0",     # property-based tests for metrics and the splitter
    "pyright>=1.1.390",    # type checking from the CLI
]
docs = [
    "mkdocs-material>=9.5",          # documentation site theme
    "mkdocstrings[python]>=0.26",    # auto API from docstrings
    "mkdocs-static-i18n>=1.2",       # bilingual pages (en/ru)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/warmtransfer"]

[project.scripts]
warmbench = "warmtransfer.bench.__main__:main"

[project.urls]
Repository = "https://github.com/pacifikus/warm-transfer"
Documentation = "https://pacifikus.github.io/warm-transfer/"
Issues = "https://github.com/pacifikus/warm-transfer/issues"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]  # allow ambiguous unicode (e.g. × in docstrings)

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "bench: tests that require heavy dependencies (extra 'bench'); skipped without them",
]
addopts = "-q --strict-markers"

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
